# QcmBackend

./: .gitignore  Cargo.toml  about.toml
backend/: Cargo.toml  build.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000002_create_rel_table.rs  m20220101_000003_create_table.rs  m20220101_000004_create_provider_table.rs  m20220101_000005_create_library_table.rs  m20220101_000006_create_table.rs  m20250418_145233_create_table.rs  m20250521_145233_create_fts_table.rs  m20250522_145233_create_dynamic_table.rs  m20250522_145233_create_favorite_table.rs  m20250523_145233_create_dynamic_table.rs  m20250718_000001_create_rel_index.rs  m20250801_000001_create_table.rs  m20250814_000001_album_add_col.rs  m20250824_000001_create_table.rs  m20250824_145233_create_fts_table.rs  m20251124_145233_recreate_remote_mix.rs  m20251129_145233_create_remote_mix.rs  m20251129_145233_recreate_remote_mix.rs  m20251214_145233_create_fts_table.rs
backend/migration/src/cache/: m20220101_000001_create_table.rs  m20260404_000001_create_block_cache.rs  mod.rs
backend/migration/src/drop/: m20220101_000001_create_table.rs  m20220101_000002_create_rel_table.rs  m20220101_000003_create_table.rs  m20250521_145233_create_fts_table.rs  m20250523_145233_create_dynamic_table.rs  m20250718_000001_create_rel_index.rs  m20250801_000001_create_table.rs  m20250815_145233_create_fts_table.rs  mod.rs
backend/proto/: filter.proto  message.proto  model.proto
backend/src/: convert.rs  error.rs  event.rs  global.rs  lib.rs  main.rs  msg.rs  schema.sql  task.rs
backend/src/api/: db.rs  event_process.rs  handler.rs  helper_extra.rs  helper_sort.rs  library.rs  mod.rs  pagination.rs  process_event.rs  process_http.rs  process_qcm.rs  process_ws.rs
backend/src/db/: filter.rs  mod.rs
backend/src/fts/: entry.rs  mod.rs  tokenizer.rs
backend/src/http/: body_type.rs  error.rs  mod.rs  range.rs
backend/src/media/: image.rs  mod.rs  server.rs
backend/src/reverse/: block_store.rs  body_type.rs  bus.rs  bus_handler.rs  connection.rs  connection_handler.rs  handler.rs  io.rs  io_handler.rs  mod.rs  piece.rs  process.rs  reverse.rs  reverse_handler.rs  source_actor.rs
backend/src/sql_macro/: mod.rs
core/: Cargo.toml
core/macro/: Cargo.toml
core/macro/src/: lib.rs
core/src/: error.rs  event.rs  global.rs  http.rs  lib.rs  meta.rs  plugin.rs  provider.rs
core/src/crypto/: mod.rs
core/src/db/: basic.rs  fts.rs  mod.rs  size.rs  sync.rs  values.rs
core/src/model/: album.rs  album_artist.rs  artist.rs  cache.rs  cache_block.rs  cache_part.rs  cache_source.rs  collection.rs  dynamic.rs  favorite.rs  genre.rs  image.rs  item.rs  library.rs  mix.rs  mix_song.rs  mod.rs  playlist.rs  playlist_song.rs  program.rs  provider.rs  radio.rs  radio_program.rs  rel_album_artist.rs  rel_mix_song.rs  rel_radio_program.rs  rel_song_artist.rs  remote_mix.rs  song.rs  song_artist.rs  type_enum.rs  util.rs
core/src/subtitle/: lrc.rs  mod.rs
core/src/subtitle/lrc/: error.rs  mod.rs  parse.rs
plugin/: Cargo.toml
plugin/local/: Cargo.toml
plugin/lua/: Cargo.toml
plugin/lua/src/: crypto.rs  enums.rs  error.rs  http.rs  lib.rs  plugin.rs  provider.rs  timestamp.rs  util.rs  utils.rs
plugin/src/: lib.rs
proto/: messages.proto
service/jellyfin/: Cargo.toml
service/local/: Cargo.toml
service/lua/: Cargo.toml
src/: lib.rs  models.rs
src/api/: queries.rs
src/crypto/: mod.rs  ncm.rs
src/db/: setup.rs
src/service/ncm/: client.rs  crypto.rs  error.rs  mod.rs  model.rs  types.rs
src/service/ncm/api/: mod.rs
src/service/ncm/api/album/: mod.rs
src/service/ncm/api/artist/: mod.rs
src/service/ncm/api/cloud/: mod.rs
src/service/ncm/api/comments/: mod.rs
src/service/ncm/api/djradio/: mod.rs
src/service/ncm/api/feedback/: mod.rs
src/service/ncm/api/login/: mod.rs
src/service/ncm/api/playlist/: mod.rs
src/service/ncm/api/radio/: mod.rs
src/service/ncm/api/songs/: mod.rs
src/service/ncm/api/upload/: mod.rs
src/service/ncm/api/user/: mod.rs
