[workspace]
members = [
    "core",
    "backend",
    "plugin/lua",
    "plugin/jellyfin",
#    "vendor/qcm-plugin-jellyfin",
#    "plugin/jellyfin",
#    "plugin/local"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
#qcm-plugin-jellyfin = { git = "https://github.com/hypengw/qcm-jellyfin-plugin.git", branch = "master" }
