[package]
name = "qcm-backend"
authors = ["hypengw <hypengwip@gmail.com>"]
version.workspace = true
edition.workspace = true

[dependencies]
qcm-core = { path = "../core" }
anyhow = "1.0"
log = "0.4"
serde = "1"
serde_json = "1.0"
thiserror = "2.0"
tokio = "1"
crossbeam-channel = "0.5"
reqwest = "0.12"
chrono = "0.4"
sea-orm = "1.1"
sqlx = "0.8"

migration = { path = "./migration" }
once_cell = "1"
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
prost = "0.13"
prost-types = "0.13"
futures-util = "0.3"
tokio-tungstenite = "0.26"
rand = "0.9"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["server-auto"] }
http-body-util = "0.1"
hyper-tungstenite = "0.17"

qcm-plugins = { path = "../plugin" }

[build-dependencies]
prost-build = "0.13"
