[package]
name = "qcm-core"
version = "0.1.0"
authors = ["hypengw <hypengwip@gmail.com>"]
edition = "2021"

[dependencies]
qcm-core-macro = { path = "./macro" }
log = "0.4"
openssl = "0.10"
hex = "0.4"
base64 = "0.22"
once_cell = "1"
async-trait = "0"
anyhow = "1.0"
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "with-uuid",
    "with-chrono",
] }
