[package]
name = "qcm-core"
version = "0.1.0"
authors = ["hypengw <hypengwip@gmail.com>"]
edition = "2021"

[dependencies]
qcm-core-macro = { path = "./macro" }
# basic
log = "0.4"
tracing = "0.1"
uuid = { version = "1.4", features = ["v4"] }
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = "0.26"
strum_macros = "0.26"
chrono = "0.4"
# crypto
openssl = "0.10"
hex = "0.4"
base64 = "0.22"
# error
anyhow = "1.0"
thiserror = "2.0"
# concurrent
crossbeam-channel = "0.5"
# async
async-trait = "0.1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "time",
] }
bytes = "1"
futures = "0.3"
# client
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }
cookie_store = "0.21"
reqwest_cookie_store = "0.8"
# orm
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "with-uuid",
    "with-chrono",
    "debug-print",
    "sqlite-use-returning-for-3_35",
] }
# other
const-chunks = "0.3"
rust_decimal = "1"
rust_decimal_macros = "1"
nom = "8"
